--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         }
     ],
     "require": {
-        "php": "^5.6 || ^7.0",
+        "php": "^5.6 || ^7.0 || ^8.0",
         "guzzlehttp/guzzle": "^6.0",
         "symfony/console": "^3.1 || ^4.1 || ^v5.0"
     },
